added english language studio info

--- a/project1/itads-project-intro.tex
+++ b/project1/itads-project-intro.tex
@@ -64,9 +64,13 @@ Project evaluation is based on the following aspects:
   A separate document gives detailed guidelines for writing a project report.
   The ITADS course focuses on technical aspects of programming and problem solving.
   Reports must be written in English, but language quality is secondary: as long as it remains comprehensible, English errors are not relevant.
-  Verbatim quotes (copy-pasting) from other sources is acceptable \textbf{if they are short, properly marked, and adequately cited}.
+  Verbatim quotes (copy-pasting) from other sources is acceptable \textbf{if they are short, properly marked, and adequately cited} (the separate report writing guideline gives an example).
   If language is a major obstacle for a team, it is possible to receive a deadline extension for the report.
   Notify the lecturer as early as possible in order to arrange such an extension.
+  
+  Note that Halmstad University offers an \textbf{English Language Studio} for students who seek help with written English.
+  The studio is available on Wednesdays between 9:00 and 12:00 in room F-208.
+  The teacher is Nicholas Lloyd-Pugh \texttt{<nicholas.lloyd-pugh@hh.se>} (phone 167372).
   
 \end{description}
 
