pretty much done with project definition, should maybe cut it down a bit though.

--- a/project1/itads-bibliography.bib
+++ b/project1/itads-bibliography.bib
@@ -5,3 +5,11 @@
   month =  sep,
   howpublished = {\url{http://en.wikipedia.org/wiki/Sorting_algorithm}}
 }
+
+@misc{gnuplot,
+  author = {Thomas Williams and Colin Kelley},
+  title =  {Gnuplot},
+  year =   2011,
+  month =  sep,
+  howpublished = {\url{http://www.gnuplot.info/}}
+}
