--- a/project1/itads-bibliography.bib
+++ b/project1/itads-bibliography.bib
@@ -7,7 +7,7 @@
 }
 
 @misc{gnuplot,
-  author = {Thomas Williams, Colin Kelley, and many others},
+  author = {Thomas Williams and Colin Kelley and many others},
   title =  {Gnuplot},
   year =   2011,
   month =  sep,
