feedback from Slawomir about the project ("it is too easy! :-) and some work towards a separate example report

--- a/project1/itads-bibliography.bib
+++ b/project1/itads-bibliography.bib
@@ -7,9 +7,41 @@
 }
 
 @misc{gnuplot,
-  author = {Thomas Williams, Colin Kelley, and many others},
+  author = {Thomas Williams and Colin Kelley and many others},
   title =  {Gnuplot},
   year =   2011,
   month =  sep,
   howpublished = {\url{http://www.gnuplot.info/}}
+}
+
+@misc{itads-p1,
+  author = {Roland Philippsen},
+  title =  {ITADS Project 1},
+  year =   2011,
+  month =  sep,
+  howpublished = {\url{http://tinyurl.com/itads-ht11-p1}}
+}
+
+ @misc{wikipedia:bubble-sort,
+  author = {Wikipedia},
+  title =  {Bubble sort},
+  year =   2011,
+  month =  sep,
+  howpublished = {\url{http://en.wikipedia.org/wiki/Bubble_sort}}
+}
+
+ @misc{wikipedia:insertion-sort,
+  author = {Wikipedia},
+  title =  {Insertion sort},
+  year =   2011,
+  month =  sep,
+  howpublished = {\url{http://en.wikipedia.org/wiki/Insertion_sort}}
+}
+
+ @misc{wikipedia:merge-sort,
+  author = {Wikipedia},
+  title =  {Merge sort},
+  year =   2011,
+  month =  sep,
+  howpublished = {\url{http://en.wikipedia.org/wiki/Merge_sort}}
 }
