--- a/project1/itads-report-guidelines.tex
+++ b/project1/itads-report-guidelines.tex
@@ -9,9 +9,12 @@
   {\normalsize
     Introduction to Algorithms, Data Structures, and Problem Solving\\
     DA4002 (HT11) Halmstad University}\\
-  Template Report with Guidelines\\
+  Example Report with Guidelines\\
+  Project 1: Computational Complexity
 }
 \author{
+  Roland Philippsen\\
+  course examiner\\
   \texttt{roland.philippsen@hh.se}
 }
 \maketitle
@@ -20,15 +23,18 @@
 
 \section{Introduction}
 
-a (short!) written report is an essential part of the project.
-It must follow a specific format and clearly present the work performed by the team.
+A (short!) written report is an essential part of the project.
+It must clearly identify the team and present the work performed by them.
+This example report provides a recommended format.
+It uses the two benchmark applications given to the course participants as technical content, and adds guidelines on how to write a good project report.
+
 In terms of project evaluation, the most important aspects of the report are:
 \begin{itemize}
 \item Present what has been done by the team during the project.
 \item Explain how to run the code developed by the team.
 \item Clearly present the obtained technical results.
 \end{itemize}
-Section~\ref{sec:report} gives detailed guidelines on writing the project report.
+
 The ITADS course focuses on technical aspects of programming and problem solving.
 The quality of the written language in the report is secondary, and as long as it remains comprehensible, English errors are not relevant.
 Verbatim quotes (copy-pasting) from other sources is acceptable \textbf{if they are short, properly marked, and adequately cited}.
