Finished the example report with integrated guidelines.

--- a/project1/itads-bibliography.bib
+++ b/project1/itads-bibliography.bib
@@ -14,6 +14,14 @@
   howpublished = {\url{http://www.gnuplot.info/}}
 }
 
+@misc{gnu-make,
+  author = {Free Software Foundation},
+  title =  {{GNU} Make},
+  year =   2011,
+  month =  sep,
+  howpublished = {\url{http://www.gnu.org/software/make/}}
+}
+
 @misc{itads-p1,
   author = {Roland Philippsen},
   title =  {ITADS Project 1},
@@ -22,7 +30,7 @@
   howpublished = {\url{http://tinyurl.com/itads-ht11-p1}}
 }
 
- @misc{wikipedia:bubble-sort,
+@misc{wikipedia:bubble-sort,
   author = {Wikipedia},
   title =  {Bubble sort},
   year =   2011,
@@ -30,7 +38,7 @@
   howpublished = {\url{http://en.wikipedia.org/wiki/Bubble_sort}}
 }
 
- @misc{wikipedia:insertion-sort,
+@misc{wikipedia:insertion-sort,
   author = {Wikipedia},
   title =  {Insertion sort},
   year =   2011,
@@ -38,10 +46,18 @@
   howpublished = {\url{http://en.wikipedia.org/wiki/Insertion_sort}}
 }
 
- @misc{wikipedia:merge-sort,
+@misc{wikipedia:merge-sort,
   author = {Wikipedia},
   title =  {Merge sort},
   year =   2011,
   month =  sep,
   howpublished = {\url{http://en.wikipedia.org/wiki/Merge_sort}}
+}
+
+@misc{wikipedia:cocktail-sort,
+  author = {Wikipedia},
+  title =  {Cocktail sort},
+  year =   2011,
+  month =  sep,
+  howpublished = {\url{http://en.wikipedia.org/wiki/Cocktail_sort}}
 }
